--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "scripts": {
+    "dev": "vite --host 127.0.0.1 --port 5500",
+    "build": "vite build", 
+    "preview": "vite preview",
     "generate-manifest": "node scripts/generateSpriteManifest.js"
   },
   "dependencies": {
