--- a/netlify.toml
+++ b/netlify.toml
@@ -22,7 +22,15 @@
     X-Content-Type-Options = "nosniff"
     Access-Control-Allow-Origin = "*"
     Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
-    Access-Control-Allow-Headers = "Content-Type, Authorization"
+    Access-Control-Allow-Headers = "Content-Type, Authorization, Accept, Origin, X-Requested-With"
+    Access-Control-Allow-Credentials = "true"
+
+[[headers]]
+  for = "/api/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
+    Access-Control-Allow-Headers = "Content-Type, Authorization, Accept, Origin, X-Requested-With"
 
 [[headers]]
   for = "*.js"
