--- a/netlify.toml
+++ b/netlify.toml
@@ -35,6 +35,19 @@
 [[headers]]
   for = "*.js"
   [headers.values]
+    Content-Type = "text/javascript; charset=utf-8"
+    Cache-Control = "public, max-age=31536000"
+
+[[headers]]
+  for = "*.mjs"
+  [headers.values]
+    Content-Type = "text/javascript; charset=utf-8"
+    Cache-Control = "public, max-age=31536000"
+
+[[headers]]
+  for = "*.json"
+  [headers.values]
+    Content-Type = "application/json; charset=utf-8"
     Cache-Control = "public, max-age=31536000"
 
 [[headers]]
