--- a/netlify.toml
+++ b/netlify.toml
@@ -33,21 +33,44 @@
     Access-Control-Allow-Headers = "Content-Type, Authorization, Accept, Origin, X-Requested-With"
 
 [[headers]]
+  for = "/spriteManifest.json"
+  [headers.values]
+    Content-Type = "application/json; charset=utf-8"
+    Cache-Control = "public, max-age=31536000"
+
+[[headers]]
   for = "*.js"
   [headers.values]
-    Content-Type = "text/javascript; charset=utf-8"
+    Content-Type = "application/javascript; charset=utf-8"
     Cache-Control = "public, max-age=31536000"
 
 [[headers]]
   for = "*.mjs"
   [headers.values]
-    Content-Type = "text/javascript; charset=utf-8"
+    Content-Type = "application/javascript; charset=utf-8"
     Cache-Control = "public, max-age=31536000"
 
 [[headers]]
   for = "*.json"
   [headers.values]
     Content-Type = "application/json; charset=utf-8"
+    Cache-Control = "public, max-age=31536000"
+
+# Headers específicos para directorios del juego
+[[headers]]
+  for = "/characters/*"
+  [headers.values]
+    Content-Type = "application/javascript; charset=utf-8"
+
+[[headers]]
+  for = "/core/*"
+  [headers.values]
+    Content-Type = "application/javascript; charset=utf-8"
+
+[[headers]]
+  for = "/ui/**/*"
+  [headers.values]
+    Content-Type = "application/javascript; charset=utf-8"
     Cache-Control = "public, max-age=31536000"
 
 [[headers]]
