--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "scripts": {
     "dev": "npm run sync && vite --host 127.0.0.1 --port 5500",
+    "dev:debug": "npm run sync && vite --host 127.0.0.1 --port 5500 --debug",
     "build": "npm run sync && vite build",
     "build:manual": "npm run sync && node scripts/manualBuild.js",
     "preview": "vite preview",
     "sync": "node scripts/syncToPublic.js",
-    "generate-manifest": "node scripts/generateSpriteManifest.js"
+    "generate-manifest": "node scripts/generateSpriteManifest.js",
+    "test:mime": "echo 'Abre http://localhost:5500/debug-mime-types.html para diagnosticar MIME types'",
+    "test:modules": "echo 'Abre http://localhost:5500/test-modules.html para probar módulos'"
   },
   "dependencies": {
     "three": "^0.178.0"
@@ -15,5 +18,6 @@
   },
   "engines": {
     "node": ">=18.0.0"
-  }
+  },
+  "type": "module"
 }
